--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "Dongrium"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+name                     : "Dongwoo Lee"
 description              : "An amazing website."
 url                      : "https://dongrium.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
