--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Dongwoo Lee"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Patterning your life around other's opinions is nothing more than **slavery**."
+  bio              : "**Patterning your life** around other's opinions is nothing more than slavery."
   location         : "Republic of Korea"
   email            :
   links:
